Fixed off center submit

--- a/frontend/src/Styles/AccountSettings.css
+++ b/frontend/src/Styles/AccountSettings.css
@@ -95,7 +95,7 @@ overflow-y: auto;
     margin-top: 20px;
     height: 45px;
     width: 20%;
-    margin-left: 20%;
+    margin-left: 40%;
     margin-bottom: 30px;
     font-family: 'Rockwell', 'Arial Narrow', Arial, sans-serif;
     font-weight: bold;
