--- a/frontend/src/Styles/MainPage.css
+++ b/frontend/src/Styles/MainPage.css
@@ -38,7 +38,7 @@ border-bottom: 5px solid rgb(50, 50, 50);
 }
 
 #NoItems{
-    margin-top: 20px;
+
     font-size: x-large;
     font-family: 'Rockwell', 'Arial Narrow', Arial, sans-serif;
     display:flex;
